templates/bootstrap/css/style.css
/* ... */
[class^="icon-"],
[class*=" icon-"] {
  opacity: 0.5;
  filter: alpha(opacity=50);
}
.icon-white {
  opacity: 1.0;
  filter: alpha(opacity=100);
}

.show_full_content {
display:inline;
}

.contine_read_story{
width:99%;
text-align:center;
padding:10px 0;
opacity:0.8;
filter:alpha(opacity=80);
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

.no_stories_left {
width:99%;
text-align:center;
padding:10px 0;
opacity:0.4;
filter:alpha(opacity=40);
  -webkit-border-radius: 5px;
  -moz-border-radius: 5px;
  border-radius: 5px;
}

/********************* CATEGORY MENU ********************/
.subhead {
    margin-bottom: 9px;
    padding-bottom: 0;
}
.subnav {
    background-color: #EEEEEE;
    background-image: -moz-linear-gradient(center top , #F5F5F5 0%, #EEEEEE 100%);
    background-repeat: repeat-x;
    border: solid #E5E5E5;
	border-width: 1px 0;
    height: 36px;
    width: 100%;
}
.subnav .nav {
    margin-bottom: 0;
}
.subnav .nav > li > a {
    border-left: 1px solid #F5F5F5;
    border-radius: 0 0 0 0;
    border-right: 1px solid #E5E5E5;
    margin: 0;
    padding-bottom: 11px;
    padding-top: 11px;
}
.subnav .nav > .active > a, .subnav .nav > .active > a:hover {
    background-color: #E9E9E9;
    border-left: 0 none;
    border-right-color: #DDDDDD;
    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.05) inset;
    color: #777777;
    padding-left: 13px;
}
.subnav .nav > .active > a .caret, .subnav .nav > .active > a:hover .caret {
    border-top-color: #777777;
}
.subnav .nav > li:first-child > a, .subnav .nav > li:first-child > a:hover {
    border-left: 0 none;
    border-radius: 4px 0 0 4px;
    padding-left: 12px;
}
.subnav .nav > li:last-child > a {
    border-right: 0 none;
}
.subnav .dropdown-menu {
    border-radius: 0 0 4px 4px;
}
.subnav .nav > li:first-child > a, .subnav .nav > li:first-child > a:hover {
    border-radius: 0 0 0 0;
}
.subnav .dropdown-menu a {
	position: relative;
	z-index: 99;
}
.subnav .dropdown-menu:after {
    border-bottom: 6px solid #FFFFFF;
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
    content: "";
    display: inline-block;
    left: 10px;
    position: absolute;
    top: -6px;
}
.subnav .dropdown-menu:before {
    border-bottom: 7px solid rgba(0, 0, 0, 0.2);
    border-left: 7px solid transparent;
    border-right: 7px solid transparent;
    content: "";
    display: inline-block;
    left: 9px;
    position: absolute;
    top: -7px;
}
.subnav .dropdown-menu .dropdown-menu:after {
    border: 6px solid transparent;
	border-right: 6px solid #fff;
    content: "";
    display: inline-block;
    left: -11px;
    position: absolute;
    top: 6px;
	z-index: 2
}
.subnav .dropdown-menu .dropdown-menu:before {
    border: 7px solid transparent;
	border-right: 7px solid rgba(0, 0, 0, 0.2);
    content: "";
    display: inline-block;
    left: -13px;
    position: absolute;
    top: 5px;
	z-index: 1
}
.dropdown-menu .sub-menu {
    left: 100%;
    position: absolute;
    top: 0;
    visibility: hidden;
    margin-top: -1px;
}
.dropdown-menu li:hover .sub-menu {
    visibility: visible;
}
.dropdown:hover .dropdown-menu {
    display: block;
}
.nav-tabs .dropdown-menu, .nav-pills .dropdown-menu, .navbar .dropdown-menu {
    margin-top: 0;
}

.navbar .btn, .navbar .btn-group  {
	margin-top:5px;
}

#categories .subnav .dropdown-menu .caret {
	border: 4px solid transparent;
	border-left: 4px solid #08c;
}
#categories .subnav .dropdown-menu  a:hover .caret {
	border-left: 4px solid #000;
}
/****************** BREADCRUMB ******************/

.dropdown-menu li {
display:block;
}
.breadcrumb-right {
font-size:1.0em;
margin-top:-7px;
margin-right:-14px;
}

/********************* STORY ********************/
.stories {
margin:0 0 40px 77px;
clear:both;
}
.stories .admin-links a.btn, .span_comment .admin-links a.btn  {
	border-color: transparent;
	background: none;
	box-shadow: none;
}
.stories .admin-links a.btn:hover, .span_comment .admin-links a.btn:hover {
	background-color: #f5f5f5;
	background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
	background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
	background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
	background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
	background-image: linear-gradient(top, #ffffff, #e6e6e6);
	background-repeat: repeat-x;
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
	border-color: #e6e6e6 #e6e6e6 #bfbfbf;
	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
	*background-color: #e6e6e6;
	/* Darken IE7 buttons by default so they stand out more given they won't have borders */

	filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
	border: 1px solid #cccccc;
	*border: 0;
	border-bottom-color: #b3b3b3;
	-webkit-border-radius: 4px;
	-moz-border-radius: 4px;
	border-radius: 4px;
	-webkit-box-shadow: inset 1px 0 0 rgba(255,255,255,.125), inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
	-moz-box-shadow: inset 1px 0 0 rgba(255,255,255,.125), inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
	box-shadow: inset 1px 0 0 rgba(255,255,255,.125), inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
}
/* ... */

